--- a/src/app/Components/add-seller-product/add-seller-product.component.css
+++ b/src/app/Components/add-seller-product/add-seller-product.component.css
@@ -26,7 +26,7 @@
     margin-inline-end: 10%;
     margin-block-start: 1%;
     margin-block-end: 30%;
-    
+    height: fit-content;
 }
 
 .spacer{
