--- a/src/app/Components/user-login/user-login.component.css
+++ b/src/app/Components/user-login/user-login.component.css
@@ -4,9 +4,23 @@
     justify-content: center;
     flex-direction: column;
     /* margin-left: 40%; */
+    background-color: rgba(255, 255, 255, 0.7);
+    margin-inline-start: 10%;
+    margin-inline-end: 10%;
+    margin-block-start: 1%;
+    margin-block-end: 30%;
+    height: fit-content;
+}
+
+.page-title{
+    text-align: center;
+    color: rgb(245, 152, 12);
 }
 
 .label{
     color: rebeccapurple;
     font-size: small;
+}
+.btn-style{
+    background-color: blanchedalmond;
 }
