--- a/src/app/Components/user-login/user-login.component.html
+++ b/src/app/Components/user-login/user-login.component.html
@@ -1,6 +1,6 @@
 <p>user-login works!</p>
 
-<div>
+<div class ="block">
     <div *ngIf="!regtolog">
         <h1 class="page-title">Register New User</h1>
         <form class="container" [formGroup]="loginform" (ngSubmit)="OnSubmituserSignup()">
@@ -17,7 +17,7 @@
                 <input matInput placeholder="Enter your Password" formControlName="password" type="password">
             </mat-form-field>
             <a class="label" (click)="switchTouserLogin()">Already have an account ?</a><br>
-            <button mat-button type="submit">submit</button>
+            <button mat-raised-button type="submit">submit</button><br>
 
         </form>
     </div>
