--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<div class="hdr"><app-header></app-header><br><br><br></div>
+<div class="hdr" [hidden]="header_hide"><app-header ></app-header><br><br><br></div>
 <router-outlet ></router-outlet>
